--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "googleapis": "^105.0.0",
 	"@aws-sdk/client-s3": "^3.0.0",
     "http-server": "^14.1.1",
-	"lucide-react": "^0.292.0"
+	"lucide-react": "^0.292.0",
+	"recharts": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
